Desktop fixes implemented. Working on mobile next.

--- a/css/index.css
+++ b/css/index.css
@@ -168,18 +168,12 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-header nav {
+nav {
   display: flex;
   flex-basis: 40%;
   justify-content: space-around;
-  align-items: center;
 }
-header nav a {
+nav a {
   text-decoration: none;
   font-size: 150%;
   color: black;
@@ -194,6 +188,18 @@ header nav a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home header .top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 30px 0;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home header .top-content {
+  padding: 15px 0;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -240,4 +246,13 @@ header nav a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .btn {
+  width: 90%;
+  background-color: lightseagreen;
+  color: white;
+  font-size: 200%;
+  border: solid;
+  border-radius: 15px;
+  padding: 13px 0px;
 }
