--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,21 @@
 .home {
+  header {
+
+    .top-bar {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+      padding: 30px 0;
+      border-bottom: 2px dashed @navigation-border;
+    }
+
+    .top-content {
+      padding: 15px 0;
+      border-bottom: 2px dashed @navigation-border;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,8 +23,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+
+
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -57,5 +74,15 @@
       width: 30%;
       margin-bottom: 30px;
     }
+  }
+
+  .btn {
+    .btn-width(90%);
+    background-color: lightseagreen;
+    color: white;
+    font-size: 200%;
+    border: solid;
+    border-radius: 15px;
+    padding: 13px 0px;
   }
 }// home
