--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,4 @@
 // Mixins in here
+.btn-width(@width) {
+  width: @width;
+}
