--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,19 +1,11 @@
-// Navigation Styles here
-header {
+nav {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-basis: 40%;
+  justify-content: space-around;
 
-  nav {
-    display: flex;
-    flex-basis: 40%;
-    justify-content: space-around;
-    align-items: center;
-
-    a {
-      text-decoration: none;
-      font-size: 150%;
-      color: black;
-    }
+  a {
+    text-decoration: none;
+    font-size: 150%;
+    color: black;
   }
 }
